--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -170,5 +170,6 @@
 	"Ravenous Tracker": "Ravenous Tracker",
 	"Cards beneath George": "Cards beneath George",
 	"Cards beneath Diana": "Карты под сыщиком",
-	"Cards beneath Gloria": "Карты под сыщиком"
+	"Cards beneath Gloria": "Карты под сыщиком",
+	"Upkeep resources": "Ресурсы в фазе передышки"
 }
