--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -81,7 +81,9 @@
 	"board.help.pins.swipe": "Swipe down on a pinned calculation to go to a page where you've created this calculation",
 	"board.help.longPress.investigatorSelect": "If you are playing with 2+ investigators, hold down on the mini image to view all investigators' stats",
 
-	"upkeep.investigator.getResources": "{{investigatorName}} gets resources: {{resourceCount}}",
+	"upkeep.investigator.getResources_one": "{{name}} gets {{count}} resource",
+	"upkeep.investigator.getResources_other": "{{name}} gets {{count}} resources",
+
 	"upkeep.investigator.actionsReset": "{{investigatorName}}: Actions reset",
 
 	"mythos.doom": "Placed 1 doom on the current agenda. Total doom: {{doom}}",
