--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -80,10 +80,11 @@
 	"board.help.press.clue": "Увеличивает значение на 1",
 	"board.help.longPress.investigatorSelect": "Если вы играете за 2+ сыщиков, удерживайте нажатие на мини-изображении, чтобы посмотреть параметры всех сыщиков",
 
-	"upkeep.investigator.actionsReset": "{{investigatorName}}: действия обновлены",
+	"upkeep.investigator.actionsReset": "{{name}}: действия обновлены",
 
-	"upkeep.investigator.getResources": "{{investigatorName}} получает ресурсы: {{count}}шт",
-
+	"upkeep.investigator.getResources_one": "{{name}} получает {{count}} ресурс",
+	"upkeep.investigator.getResources_few": "{{name}} получает {{count}} ресурса",
+	"upkeep.investigator.getResources_many": "{{name}} получает {{count}} ресурсов",
 	"mythos.doom": "Добавлена 1 Безысходность. Итого: {{doom}}",
 
 	"Swipe gestures": "Свайпы",
