--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -85,6 +85,7 @@
 	"upkeep.investigator.getResources_one": "{{name}} получает {{count}} ресурс",
 	"upkeep.investigator.getResources_few": "{{name}} получает {{count}} ресурса",
 	"upkeep.investigator.getResources_many": "{{name}} получает {{count}} ресурсов",
+
 	"mythos.doom": "Добавлена 1 Безысходность. Итого: {{doom}}",
 	"timing.step.name": "Шаг {{name}}",
 
@@ -174,5 +175,7 @@
 	"Cards beneath George": "Cards beneath George",
 	"Cards beneath Diana": "Карты под сыщиком",
 	"Cards beneath Gloria": "Карты под сыщиком",
-	"Upkeep resources": "Ресурсы в фазе передышки"
+	"Upkeep resources": "Ресурсы в фазе передышки",
+
+	"Rules Reference": "Справочник"
 }
