--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -84,8 +84,15 @@
 	"board.help.pins.swipe": "Swipe down on a pinned calculation to go to a page where you've created this calculation",
 	"board.help.longPress.investigatorSelect": "If you are playing with 2+ investigators, hold down on the mini image to view all investigators' stats",
 
-	"upkeep.investigator.getResources_one": "{{name}} gets {{count}} resource",
-	"upkeep.investigator.getResources_other": "{{name}} gets {{count}} resources",
+	"upkeep.investigator.getResources_one": "{{name}} has got {{count}} resource",
+	"upkeep.investigator.getResources_other": "{{name}} has got {{count}} resources",
+
+	"clues.spent_one": "{{name}} has spent {{count}} clue",
+	"clues.spent_other": "{{name}} has spent {{count}} clues",
+
+	"clues.remains_zero": "Clues are out",
+	"clues.remains_one": "Remains {{count}} clue",
+	"clues.remains_other": "Reamains {{count}} clues",
 
 	"upkeep.investigator.actionsReset": "{{name}}: Actions reset",
 
