--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -89,6 +89,15 @@
 	"upkeep.investigator.getResources_few": "{{name}} получает {{count}} ресурса",
 	"upkeep.investigator.getResources_many": "{{name}} получает {{count}} ресурсов",
 
+	"clues.spent_one": "{{name}} тратит {{count}} улику",
+	"clues.spent_few": "{{name}} тратит {{count}} улики",
+	"clues.spent_many": "{{name}} тратит {{count}} улик",
+
+	"clues.remains_zero": "Улики закончились",
+	"clues.remains_one": "Осталась {{count}} улика",
+	"clues.remains_few": "Осталось {{count}} улики",
+	"clues.remains_many": "Осталось {{count}} улик",
+
 	"mythos.doom": "Добавлена 1 Безысходность. Итого: {{doom}}",
 	"timing.step.name": "Шаг {{name}}",
 
