--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -89,6 +89,10 @@
 	"upkeep.investigator.getResources_few": "{{name}} получает {{count}} ресурса",
 	"upkeep.investigator.getResources_many": "{{name}} получает {{count}} ресурсов",
 
+	"actions.give_one": "{{from}} даёт {{dativeName}} {{count}} действие",
+	"actions.give_few": "{{from}} даёт {{dativeName}} {{count}} действия",
+	"actions.give_many": "{{from}} даёт {{dativeName}} {{count}} действий",
+
 	"clues.spent_one": "{{name}} тратит {{count}} улику",
 	"clues.spent_few": "{{name}} тратит {{count}} улики",
 	"clues.spent_many": "{{name}} тратит {{count}} улик",
