--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -53,8 +53,6 @@
 	"board.help.chaosBag.oneMore": "Нажмите, чтобы вытянуть ещё один жетон",
 	"board.help.chaosBag.swipe": "Свайп вниз на вытянутом жетоне покажет эффект жетого жетона (если он есть и подключена памятка сценария)",
 
-	"board.help.calculator.chaosToken": "Нажмите, чтобы вытянуть жетон хаоса для проверки навыка по последнему расчёту",
-
 	"board.help.press.chaosBag": "Показывает содержимое мешка хаоса",
 	"board.help.longPress.chaosBag": "Вытягивает жетон хаоса",
 
@@ -82,6 +80,15 @@
 	"board.help.swipe.chaosBag": "Свайп вправо вытягивает жетон хаоса. Свайп вниз открывает историю проверок. Свайп вверх открывает памятку сценария",
 	"board.help.press.clue": "Увеличивает значение на 1",
 	"board.help.longPress.investigatorSelect": "Если вы играете за 2+ сыщиков, удерживайте нажатие на мини-изображении, чтобы посмотреть параметры всех сыщиков",
+
+	"board.help.details": "Детали",
+	"board.help.details.toggle": "Откройте раздел, нажав на блок с текстом сыщика снизу экрана или свайпом вверх. Закройте раздел, нажав в свободное пространство выше счётчиков сценария, стрелку вниз (в правом нижнем углу) или свайпом вниз",
+	"board.help.details.trackers": "Здесь располагаются счётчики сценария: улики, безысходность и ресурсы. Включить нужный счётчик можно в Настройках",
+	"board.help.details.goHome": "Вернуться на главный экран",
+	"board.help.details.info": "Раздел справки (вы сейчас в нём находитесь)",
+	"board.help.details.roundReference": "Интерактивная справка по структуре раунда. Вы можете открыть этот раздел свайпом вправо на описании сыщика (нижний блок на экране)",
+	"board.help.details.settings": "Настройки приложения",
+	"board.help.details.clearBoard": "Сбросить данные сыщика на начало игры",
 
 	"upkeep.investigator.actionsReset": "{{name}}: действия обновлены",
 
