--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -17,7 +17,7 @@
 
 	"board.help.press.skills": "Открывает калькулятор навыков",
 
-	"board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран, ужаса и изменения значений навыков",
+	"board.help.hold.freeArea": "Нажмите и удерживайте в свободном месте для просмотра полученных ран, ужаса и изменённых значений навыков",
 
 	"board.help.longPress.main": "Показывает/убирает счётчик модификатора. Вы можете изменить базовое значение (например, добавить постоянно +1 к здоровью, -2 к рассудку)",
 	"board.help.longPress.secondary": "Сбрасывает значение до 0",
@@ -31,23 +31,23 @@
 	"board.help.special.additionalAction": "Некоторые сыщики имеют особые дополнительные действия. Нажмите на эту иконку, чтобы отметить действие как выполненное",
 	"board.help.special.lola": "Нажмите на блок с именем, чтобы сменить текущую роль (класс)",
 
-	"board.help.calculator.result": "Минимальный результат - 0. Деление округляет результат в меньшую сторону",
-	"board.help.calculator.history": "Нажмите на «Считать» чтобы добавить расчёт в историю. Это значение будет меняться автоматически, если поменяются параметры вашего сыщика.\nУдерживайте нажатие, чтобы вытянуть жетон хаоса для проверки навыка по этому расчёту",
-	"board.help.calculator.history.actions": "Свайп влево на старых расчётах открывает меню с опциями: Удалить расчёт, Задать имя, Закрепить расчёт",
-	"board.help.calculator.history.remove": "Удалить расчёт",
-	"board.help.calculator.history.setName": "Дать название расчёта",
-	"board.help.calculator.history.pin": "Закрепить расчёт наверху списка и на планшете",
+	"board.help.calculator.result": "Минимальный результат – 0. Деление округляет результат в меньшую сторону. Свайп вправо или влево на текущей формуле стирает последний символ в расчёте.",
+	"board.help.calculator.history": "Нажмите на кнопку «Считать», чтобы добавить расчёт в историю. Это значение будет меняться автоматически, если изменятся параметры вашего сыщика. Удерживайте кнопку «Считать», чтобы сохранить расчёт и немедленно запустить проверку, используя полученное значение.",
+	"board.help.calculator.history.actions": "Нажмите и удерживайте сохраненный расчёт, чтобы вытянуть жетон хаоса для проверки навыка по этому расчёту. Свайп влево на сохраненном расчёте открывает меню с опциями:",
+	"board.help.calculator.history.remove": "Удалить расчёт;",
+	"board.help.calculator.history.setName": "Дать название расчёта;",
+	"board.help.calculator.history.pin": "Закрепить расчёт в списке и на планшете.",
 
 	"board.help.pins.press": "На экране планшета нажатие на расчёте открепляет расчёт",
-	"board.help.pins.longPress": "На экране планшета удерживайте нажатие, чтобы вытянуть жетон хаоса для данного расчёта",
-	"board.help.pins.swipe": "Свайп вниз на закрплённым расчёте откроет калькулятор проверок для навыка с этим расчётом",
-	"board.help.pins.toggle": "Если у вас есть закрплённые расчёты, то вы можете нажать на блок расчётов, чтобы его скрыть/показать",
+	"board.help.pins.longPress": "Нажмите и удерживайте закреплённый расчёт, чтобы вытянуть жетон хаоса для данного расчёта.",
+	"board.help.pins.swipe": "Свайп вниз на закреплённом расчёте откроет калькулятор проверок для связанного с этим расчётом навыка.",
+	"board.help.pins.toggle": "Если у вас есть закреплённые расчёты, то они будут отображаться в блоке расчётов на главном экране. Включив «Продвинутый режим» в настройках вы сможете скрывать/показать блок расчетов нажав на него.",
 
-	"board.help.chaosBag": "Чтобы вытянуть жетон хаоса, удерживайте нажатие на значении навыка",
+	"board.help.chaosBag": "Чтобы вытянуть жетон хаоса, нажмите и удерживайте значение навыка",
 	"board.help.chaosBag.returnAll": "Вернуть все вытянутые жетоны в мешок хаоса",
 	"board.help.chaosBag.return": "[token_symbol_fill] - Вернуть все вытянутые жетоны в мешок хаоса (кроме [bless] и [curse])",
 	"board.help.chaosBag.token.press": "Нажатие на жетон вернёт его в мешок или удалит, если это [bless] или [curse]",
-	"board.help.chaosBag.token.longPress": "Удерживайте нажатие на вытянутом жетоне, чтобы его запечатать",
+	"board.help.chaosBag.token.longPress": "Нажмите и удерживайте на вытянутом жетоне, чтобы его запечатать",
 	"board.help.chaosBag.oneMore": "Нажмите, чтобы вытянуть ещё один жетон",
 	"board.help.chaosBag.swipe": "Свайп вниз на вытянутом жетоне покажет эффект жетого жетона (если он есть и подключена памятка сценария)",
 
@@ -67,8 +67,8 @@
 	"modal.skillCheck.clear": "Очистить историю?",
 	"modal.skillCheck.clear.text": "Это действие безвозвратно удалит историю пройденных проверок",
 
-	"board.help.calculator.difficulty": "Введите число и удерживайте на нём нажатие для того, чтобы задать сложность проверки. Нажмите на иконку навыка наверху экрана, чтобы сбросить сложность проверки",
-	"board.help.calculator.buttons": "Свайп вверх на цифрах 0-9 запускает проверку навыка и добавляет это число к проверке. Свайп вниз вычитает число из проверки.\nУдерживайте кнопку «Считать», чтобы сохранить расчёт и немедленно запустить проверку, используя полученное значение.\nУдерживайте нажатие на цифре для того, чтобы установить сложность проверки",
+	"board.help.calculator.difficulty": "Есть два способа установить сложность проверки:\nа) введите число, нажмите и удерживайте это число в строке формулы;\nб) нажмите и удерживайте цифру на клавиатуре.\nНажмите на иконку навыка наверху экрана, чтобы сбросить установленное значение сложности проверки.",
+	"board.help.calculator.buttons": "Свайп вверх на цифрах 0–9 запускает проверку навыка и добавляет это число к проверке. Свайп вниз вычитает это число из проверки.",
 
 	"board.help.calculator.expression": "Свайп вправо или влево на текущей формуле стирает последний символ в расчёте",
 
@@ -77,7 +77,7 @@
 
 	"board.help.swipe.chaosBag": "Свайп вправо вытягивает жетон хаоса. Свайп вниз открывает историю проверок. Свайп вверх открывает памятку сценария",
 	"board.help.press.clue": "Увеличивает значение на 1",
-	"board.help.longPress.investigatorSelect": "Если вы играете за 2+ сыщиков, удерживайте нажатие на мини-изображении, чтобы посмотреть параметры всех сыщиков",
+	"board.help.longPress.investigatorSelect": "Если вы играете за 2+ сыщиков, нажмите и удерживайте на мини-изображении, чтобы посмотреть параметры всех сыщиков",
 
 	"board.help.details": "Детали",
 	"board.help.details.toggle": "Откройте раздел, нажав на блок с текстом сыщика снизу экрана или свайпом вверх. Закройте раздел, нажав в свободное пространство выше счётчиков сценария, стрелку вниз (в правом нижнем углу) или свайпом вниз",
@@ -109,6 +109,12 @@
 
 	"mythos.doom": "Добавлена 1 Безысходность. Итого: {{doom}}",
 	"timing.step.name": "Шаг {{name}}",
+
+	"chaosToken.curse.effect": "−2. Вытяните ещё один жетон. Вместо того чтобы вернуть этот жетон [curse] в мешок хаоса, верните его в резерв жетонов",
+	"chaosToken.bless.effect": "+2. Вытяните ещё один жетон. Вместо того чтобы вернуть этот жетон [bless] в мешок хаоса, верните его в резерв жетонов",
+	"chaosToken.frost.first.effect": "–1. Вытяните ещё один жетон",
+	"chaosToken.frost.second.effect": "Проверка автоматически провалена",
+	"chaosToken.autoFail.effect": "Проверка автоматически провалена",
 
 	"Player Window": "Окно игрока",
 	"Phase end": "Конец фазы",
