--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -193,5 +193,7 @@
 	"Player Window": "Player Window",
 	"Rules Reference": "Rules Reference",
 
-	"Sync with investigator clues": "Sync with investigator clues"
+	"Sync with investigator clues": "Sync with investigator clues",
+
+	"Modify tokens": "Modify tokens"
 }
