feat: fill chaos bag

--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -195,5 +195,7 @@
 
 	"Sync with investigator clues": "Sync with investigator clues",
 
-	"Modify tokens": "Modify tokens"
+	"Modify tokens": "Modify tokens",
+	"Fill": "Fill",
+	"Fill Chaos Bag": "Fill Chaos bag"
 }
