--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -207,5 +207,8 @@
 	"Upkeep resources": "Ресурсы в фазе передышки",
 
 	"Rules Reference": "Справочник",
-	"Sync with investigator clues": "Связать с уликами сыщика"
+	"Sync with investigator clues": "Связать с уликами сыщика",
+
+	"Fill": "Заполнить",
+	"Fill Chaos Bag": "Заполнить мешок"
 }
