--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -50,6 +50,7 @@
 	"board.help.chaosBag.token.longPress": "Нажмите и удерживайте на вытянутом жетоне, чтобы его запечатать",
 	"board.help.chaosBag.oneMore": "Нажмите, чтобы вытянуть ещё один жетон",
 	"board.help.chaosBag.swipe": "Свайп вниз на вытянутом жетоне покажет эффект жетого жетона (если он есть и подключена памятка сценария)",
+	"board.help.chaosBag.reference": "Открыть справку по жетонам",
 
 	"Modify tokens": "Изменять значения жетонов",
 
