--- a/slices/features/i18n/config/translations/en.json
+++ b/slices/features/i18n/config/translations/en.json
@@ -118,6 +118,9 @@
 	"chaosToken.frost.second.effect": "Resolve the test as an automatic failure",
 	"chaosToken.autoFail.effect": "Automatic failure",
 
+	"ability.addBless": "{{name}} adds a bless token to chaos bag",
+	"ability.addBless.full": "You can't add more than 10 bless tokens",
+
 	"board.help.syncScenarioClues": "Enables/disables synchronization of scenario and investigator clues: clues added to the scenario will be removed from the investigator",
 
 	"defeat.modal.text": "Choose other investigator",
