--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -110,6 +110,9 @@
 	"clues.remains_few": "Осталось {{count}} улики",
 	"clues.remains_many": "Осталось {{count}} улик",
 
+	"ability.addBless": "{{name}} добавляет в мешок жетон Благословения",
+	"ability.addBless.full": "Нельзя добавить больше 10 Благословений",
+
 	"mythos.doom": "Добавлена 1 Безысходность. Итого: {{doom}}",
 	"timing.step.name": "Шаг {{name}}",
 
