--- a/slices/features/i18n/config/translations/ru.json
+++ b/slices/features/i18n/config/translations/ru.json
@@ -110,7 +110,10 @@
 	"clues.remains_few": "Осталось {{count}} улики",
 	"clues.remains_many": "Осталось {{count}} улик",
 
-	"ability.addBless": "{{name}} добавляет в мешок жетон Благословения",
+	"ability.addBless_one": "{{name}} добавляет в мешок {{count}} жетон Благословения",
+	"ability.addBless_few": "{{name}} добавляет в мешок {{count}} жетона Благословения",
+	"ability.addBless_many": "{{name}} добавляет в мешок {{many}} жетонов Благословения",
+
 	"ability.addBless.full": "Нельзя добавить больше 10 Благословений",
 
 	"mythos.doom": "Добавлена 1 Безысходность. Итого: {{doom}}",
