--- a/slices/modules/core/i18n/shared/config/translations/ru.json
+++ b/slices/modules/core/i18n/shared/config/translations/ru.json
@@ -97,9 +97,9 @@
 	"upkeep.investigator.getResources_few": "{{name}} получает {{count}} ресурса",
 	"upkeep.investigator.getResources_many": "{{name}} получает {{count}} ресурсов",
 
-	"actions.give_one": "{{from}} даёт {{dativeName}} {{count}} действие",
-	"actions.give_few": "{{from}} даёт {{dativeName}} {{count}} действия",
-	"actions.give_many": "{{from}} даёт {{dativeName}} {{count}} действий",
+	"actions.give_one": "{{fromName}} даёт {{dativeName}} {{count}} действие",
+	"actions.give_few": "{{fromName}} даёт {{dativeName}} {{count}} действия",
+	"actions.give_many": "{{fromName}} даёт {{dativeName}} {{count}} действий",
 
 	"clues.spent_one": "{{name}} тратит {{count}} улику",
 	"clues.spent_few": "{{name}} тратит {{count}} улики",
