--- a/slices/modules/core/i18n/shared/config/translations/ru.json
+++ b/slices/modules/core/i18n/shared/config/translations/ru.json
@@ -120,9 +120,9 @@
 	"mythos.doom": "Добавлена 1 Безысходность. Итого: {{doom}}",
 	"timing.step.name": "Шаг {{name}}",
 
-	"chaosToken.curse.effect": "−2. Вытяните ещё один жетон. Вместо того чтобы вернуть этот жетон [curse] в мешок хаоса, верните его в резерв жетонов",
-	"chaosToken.bless.effect": "+2. Вытяните ещё один жетон. Вместо того чтобы вернуть этот жетон [bless] в мешок хаоса, верните его в резерв жетонов",
-	"chaosToken.frost.first.effect": "–1. Вытяните ещё один жетон",
+	"chaosToken.curse.effect": "{{value}}. Вытяните ещё один жетон. Вместо того чтобы вернуть этот жетон [curse] в мешок хаоса, верните его в резерв жетонов",
+	"chaosToken.bless.effect": "{{value}}. Вытяните ещё один жетон. Вместо того чтобы вернуть этот жетон [bless] в мешок хаоса, верните его в резерв жетонов",
+	"chaosToken.frost.first.effect": "{{value}}. Вытяните ещё один жетон",
 	"chaosToken.frost.second.effect": "Проверка автоматически провалена",
 	"chaosToken.autoFail.effect": "Проверка автоматически провалена",
 
