feat: kohaku ability

--- a/slices/modules/core/i18n/shared/config/translations/en.json
+++ b/slices/modules/core/i18n/shared/config/translations/en.json
@@ -207,5 +207,7 @@
 
 	"Modify tokens": "Modify tokens",
 	"Fill": "Fill",
-	"Fill Chaos Bag": "Fill Chaos bag"
+	"Fill Chaos Bag": "Fill Chaos bag",
+	"Get action": "Get action",
+	"-2 [bless] and -2 [curse]": "-2 [bless] and -2 [curse]"
 }
