--- a/slices/modules/core/i18n/shared/config/translations/ru.json
+++ b/slices/modules/core/i18n/shared/config/translations/ru.json
@@ -222,5 +222,7 @@
 	"Sync with investigator clues": "Связать с уликами сыщика",
 
 	"Fill": "Заполнить",
-	"Fill Chaos Bag": "Заполнить мешок"
+	"Fill Chaos Bag": "Заполнить мешок",
+	"Get action": "Получить действие",
+	"-2 [bless] and -2 [curse]": "-2 [bless] и -2 [curse]"
 }
